test/deca/syntax/invalid/decl_var_no_type.deca
// Description:
//    tests de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur, (manque type pour déclaration)

{
    x = 2;
}